Fix the overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,7 @@ body {
   font-size: 100%;
   font-family: "Allura", cursive;
   font-family: "Montserrat", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 p {
